vlib/v/checker/tests/alias_type_unknown.out
vlib/v/checker/tests/alias_type_unknown.vv:1:15: error: unknown type `Bird`
    1 | type Pigeon = Bird
      |               ~~~~
